# amxxarch-7zip

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: build.yml
examples/: amxxarch_example.sma
include/: amxxarch.inc
src/: module.cpp  moduleconfig.h
src/amxx/: amxx_compat.h  meta_api.h  pawn_strings.cpp  pawn_strings.hpp
src/backend/: 7z_backend.cpp  extractor_backend.hpp
src/core/: archive_format.cpp  archive_format.hpp  events.hpp  job_manager.cpp  job_manager.hpp  logger.cpp  logger.hpp  thread_queue.hpp
